# denon-proxy

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TODO-tests.md  TODO-upnp.md  avr_connection.py  avr_discovery.py  avr_emulator.py  avr_info.py  avr_state.py  config.py  config.sample.yaml  constants.py  denon_proxy.py  docker-compose.yml  http_server.py  pyproject.toml  requirements.txt  runtime_state.py  runtime_utils.py  telnet_utils.py  web_ui.html  web_ui.py
.github/workflows/: release.yml  tests.yml
docs/: API.md  CONFIG.md  DEVELOPMENT.md  TELNET.md  TROUBLESHOOTING.md  UC-REMOTE.md
docs/UC-POWER-BUG/: UC_REMOTE_POWER_ISSUE_HANDOFF.md
docs/UC-POWER-BUG/agent-analyses/: README.md  claude-4.6-opus-2026-04-05.md  codex-agent-2026-04-05.md  consensus-multi-agent-2026-04-05.md  cursor-agent-2026-04-04.md  cursor-claude-sonnet-4-5-2026-04-05.md
src/denon_proxy/: __init__.py  cli.py  command_log.py  constants.py  main.py  py.typed
src/denon_proxy/avr/: __init__.py  connection.py  discover.py  discovery.py  info.py  state.py  telnet_utils.py  unanswered_tracker.py
src/denon_proxy/http/: __init__.py  avr_control.py  dashboard.py  server.py  uc_yaml.py  web_ui.html
src/denon_proxy/proxy/: core.py
src/denon_proxy/runtime/: __init__.py  config.py  config_io.py  logging.py  state.py
src/denon_proxy/utils/: __init__.py  utils.py
tests/: README.md  conftest.py  requirements.txt
tests/e2e/: conftest.py  test_discovery.py  test_full_stack.py  test_http_with_discovery.py  test_telnet_with_discovery.py
tests/integration/: __init__.py  conftest.py  test_discovery.py  test_http_avr_control.py  test_http_server_api.py  test_http_server_integration.py  test_telnet_virtual_avr.py
tests/unit/: conftest.py  test_avr_connection_factory.py  test_avr_connection_mvmax.py  test_avr_connection_physical.py  test_avr_connection_virtual.py  test_avr_control.py  test_avr_discover.py  test_avr_discovery_helpers.py  test_avr_discovery_ssdp.py  test_avr_info.py  test_avr_state_and_denonavr_adapter.py  test_avr_state_core.py  test_avr_state_volume.py  test_cli.py  test_denon_proxy_client.py  test_denon_proxy_config.py  test_denon_proxy_config_validation.py  test_denon_proxy_helpers.py  test_denon_proxy_parse_telnet.py  test_http_server_api.py  test_http_server_parse_command.py  test_main_entrypoint.py  test_proxy_core_helpers.py  test_runtime_logging.py  test_runtime_utils.py  test_telnet_utils.py  test_uc_yaml.py  test_unanswered_tracker.py  test_web_ui_parse_http.py
tests/unit/http/: test_dashboard.py
