[project]
name = "denon-proxy"
version = "1.1.1"
description = "Virtual Denon AVR proxy for multiple clients."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Cory Forseth" },
]
license = { text = "MIT" }
dependencies = [
  "denonavr>=0.10.0",
  "PyYAML>=6.0",
  "httpx>=0.24.0",
  "pydantic>=2.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/forsethc/denon-proxy"
Repository = "https://github.com/forsethc/denon-proxy"
Documentation = "https://github.com/forsethc/denon-proxy#readme"
Issues = "https://github.com/forsethc/denon-proxy/issues"

[project.scripts]
denon-proxy = "denon_proxy.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
denon_proxy = ["http/web_ui.html", "py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

